feat: fix rspec failure in rswag tests and delete v1 rswag
